# CFSolve

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap.ps1  pyproject.toml
.github/workflows/: workflow.yml
build_tools/: build_and_copy.sh  config.sh.example
gui/: app.py  app_windows.py  main.py
solver/: bindings.cpp  fem.cpp  fem.h
src/gui/: main.py  solver_helpers.py
src/solver/: CMakeLists.txt  __init__.py  bindings.cpp  fem.cpp  fem.h  fem.inp  fem2.inp  read_file.cpp  read_file.h  test  test.cpp  test_main.cpp
src/solver/api/: solver_api.cpp
src/solver/core/: fem.cpp  fem.h  fem_element.cpp  fem_solve.cpp
src/solver/include/: fem_element.h  fem_solve.h  read_file.h  solver_api.h  types.h
src/solver/io/: read_file.cpp
src/solver/tests/: test_fem_basic.cpp
src/tests/: test  test_fem.cpp
tests/: test_solver.py
