[build-system]
requires = [
    "scikit-build-core>=0.11",
    "pybind11>=3.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "cfs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3",
    "PySide6==6.10",
    "pyvista==0.46",
    "pyvistaqt==0.11",
    "vtk==9.5",
    "black==25.12",
    "cmake==3.18",
    "flake8==7.3",
    "isort==7.0",
    "ninja==1.13",
    "pybind11>=3.0,<4.0",
    "pytest==9.0",
    "scikit_build_core>=0.11,<0.12"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88